fix: prevent features from staggering on mobile in waves

--- a/packages/react-saasify/src/themes/waves/waves.module.css
+++ b/packages/react-saasify/src/themes/waves/waves.module.css
@@ -253,12 +253,15 @@
   max-width: 220px;
 }
 
-.theme-waves .features-section .feature:nth-of-type(3n - 2) {
-  margin-left: 0;
-}
+@media (min-width: 960px) {
+  /* Only hide margins at full width */
+  .theme-waves .features-section .feature:nth-of-type(3n - 2) {
+    margin-left: 0;
+  }
 
-.theme-waves .features-section .feature:nth-of-type(3n) {
-  margin-right: 0;
+  .theme-waves .features-section .feature:nth-of-type(3n) {
+    margin-right: 0;
+  }
 }
 
 .theme-waves .features-section .feature .illustration {
